fix: link text overflow on phone screen

--- a/src/containers/projects/project-card/ProjectCard.css
+++ b/src/containers/projects/project-card/ProjectCard.css
@@ -40,6 +40,7 @@
 .project-links {
   font-size: medium;
   text-align: left;
+  overflow-wrap: anywhere;
 
   & > h4 {
     margin-top: 0;
